--- a/mychart/templates/pg-deployment.yml
+++ b/mychart/templates/pg-deployment.yml
@@ -15,6 +15,13 @@ spec:
       containers:
         - name: postgres
           image: postgres
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"  
+            limits:
+              memory: "1Gi"
+              cpu: "1"
           ports:
             - containerPort: 5432
           env:
