--- a/mychart/templates/elastic-deployment.yml
+++ b/mychart/templates/elastic-deployment.yml
@@ -15,6 +15,13 @@ spec:
       containers:
         - name: elasticsearch
           image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"  
+            limits:
+              memory: "1Gi"
+              cpu: "1"          
           ports:
             - containerPort: 9200
           env:
