--- a/matchidchart/values.yaml
+++ b/matchidchart/values.yaml
@@ -2,23 +2,30 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
+replicaCount: 0
+mychart:
+  fullname: matchid-rpmrbx-ingress
 image:
   repository: matchid
-  name: matchid-backend
+  matchidBackName: matchid-backend
+  matchidFrontName: matchid-frontend
+  backendName: matchid-backend-rpmrbx
+  frontendName: matchid-frontend-rpmrbx
+  backConfigName: back-configmap-rpmrbx
+  frontConfigName: front-configmap-rpmrbx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
-  port: 8081
+  backendPort: "8081"
+  frontendPort: "80"
 
 authentication:
-  noauth: 'True'
+  noauth: "\"True\""
 
 elastic:
-  thread: '2'
-  maxtries: '3'
-  chunk: '500'
+  thread: "\"2\""
+  maxtries: "\"3\""
+  chunk: "\"500\""
   
 postgres:
   password: matchid
@@ -33,8 +40,10 @@ readReplicas:
 
 service:
   type: ClusterIP
-  port: 8081
-  name: matchid-backend-service
+  backendPort: "8081"
+  frontendPort: "80"
+  backendPortConfig: "\"8081\""
+  elastic: elastic-rpmrbx
   
 
 serviceAccount:
